# src/config/swagger.json
@@ -731,10 +731,10 @@
     },
     "/d_model/devicemodels": {
       "get": {
-        "summary": "查询全部设备基本信息",
-        "description": "查询全部设备基本信息",
+        "summary": "查询全部物模型基本信息",
+        "description": "查询全部物模型基本信息",
         "tags": [
-          "设备管理"
+          "物模型管理"
         ],
         "responses": {
           "200": {
@@ -880,9 +880,6 @@
                   "OrganizationId": {
                     "description": "所属组织"
                   },
-                  "AccountId": {
-                    "description": "所属用户"
-                  },
                   "Status": {
                     "description": "设备状态"
                   }
@@ -892,13 +889,132 @@
                   "Description": "四路继电器模块",
                   "DeviceModelId": "1",
                   "DeviceGroupId": "1",
-                  "OrganizationId": "1",
-                  "AccountId": "121231"
+                  "OrganizationId": "1"
                 }
               }
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "description": "状态码",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "description": "信息",
+                      "example": "添加物模型成功"
+                    },
+                    "data": {
+                      "type": "object",
+                      "description": "用户信息",
+                      "example": {
+                        "OrganizationId": "3",
+                        "Name": "南方分部",
+                        "Description": "无",
+                        "Level": 1,
+                        "LevelName": "二级",
+                        "ParentId": "1",
+                        "CreatedBy": "4e1bb3f5-8c0b-4573-8e6f-abf93bdc4224",
+                        "CreatedTime": "2024-03-12T04:41:18.326Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "token": {}
+          },
+          {
+            "server_auth": [
+              "authorization"
+            ]
+          }
+        ]
+      },
+      "get": {
+        "summary": "查询全部设备基本信息",
+        "description": "查询全部设备基本信息",
+        "tags": [
+          "设备管理"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "description": "状态码",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "description": "信息",
+                      "example": "添加物模型成功"
+                    },
+                    "data": {
+                      "type": "object",
+                      "description": "用户信息",
+                      "example": {
+                        "OrganizationId": "3",
+                        "Name": "南方分部",
+                        "Description": "无",
+                        "Level": 1,
+                        "LevelName": "二级",
+                        "ParentId": "1",
+                        "CreatedBy": "4e1bb3f5-8c0b-4573-8e6f-abf93bdc4224",
+                        "CreatedTime": "2024-03-12T04:41:18.326Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "token": {}
+          },
+          {
+            "server_auth": [
+              "authorization"
+            ]
+          }
+        ]
+      }
+    },
+    "/device/device/{id}": {
+      "get": {
+        "summary": "查询某个设备的详细信息",
+        "description": "查询某个设备的详细信息",
+        "tags": [
+          "设备管理"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "物模型id",
+            "in": "path",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
